[gd_scene load_steps=4 format=3 uid="uid://d3obpvytr60v4"]

[ext_resource type="Script" path="res://Scripts/BallController.gd" id="1_o7gh3"]

[sub_resource type="SphereMesh" id="SphereMesh_fmrla"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mu0n5"]

[node name="Ball" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 2.57236, 0)
script = ExtResource("1_o7gh3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_fmrla")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_mu0n5")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
